apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - sonarr.larswenda.org
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
      timeouts:
        request: 300s
